src/test/ui/feature-gates/feature-gate-cfg-attr-multi-1.stderr
error[E0658]: cfg_attr with zero or more than one attributes is experimental (see issue #54881)
  --> $DIR/feature-gate-cfg-attr-multi-1.rs:3:1
   |
LL | #![cfg_attr(all(), warn(nonstandard_style), allow(unused_attributes))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(cfg_attr_multi)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
